--- a/html/main.html
+++ b/html/main.html
@@ -70,6 +70,20 @@
             <div class="speaker">Мексикана</div>
         </div>
     </div>
+    <!-- <div class="slider">
+        <div class="leftButton"></div>
+        <div>
+            <ul class="photoDish">
+                <li><img src="../photo/chervonuy_borshch.jpg" alt=""></li>
+                <li><img src="../photo/surnuku.jpg" alt=""></li>
+                <li><img src="../photo/holubtsi.jpg" alt=""></li>
+            </ul>
+
+
+
+        </div>
+        <div class="rightButton"></div>
+    </div> -->
 </body>
 
 </html>
