--- a/html/signUp.html
+++ b/html/signUp.html
@@ -3,18 +3,18 @@
 
 <head>
     <link rel="shortcut icon" type="image/x-icon" href="../photo/Favicon.ico">
-    <link rel="stylesheet" href="../css/style_login.css">
+    <link rel="stylesheet" href="../css/style_signUp.css">
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Вхід</title>
+    <title>Реєстрація</title>
 </head>
 
 <body>
     <header>
         <ul class="name_login">
             <li class="name">РЕСТОРАН АССА</li>
-            <li class="login link_menu">Війти</li>
+            <li class="login"><a href="../html/login.html" class="link_menu">Війти</a></li>
         </ul>
         <ul class="menu">
             <li><a href="../html/main.html"><img src="../photo/index.png" class="menuIcon"></a></li>
@@ -31,22 +31,38 @@
     </header>
     <div class="mainBox">
         <form class="boxLogin">
-            <div class="mainTextLogin">Вхід</div>
+            <div class="mainTextLogin">Реєстрація</div>
             <div class="inputs">
-                <input type="text" placeholder="Ім'я користувача" required title="Введіть ім'я користувача">
+                <input type="text" placeholder="Ім'я користувача" required title="Введіть ім'я користувача"
+                    pattern="^[A-Za-z0-9_]+$">
                 <input type="password" placeholder="Пароль" required title="Введіть пароль"
                     pattern="(?=.*[a-z])(?=.*[A-Z])[0-9a-zA-Z]{6,}">
-            </div>
-            <div class="recoveryRegister">
-                <a href="#">Забули пароль?</a>
-                <a href="signUp.html">Зареєструватися</a>
+                <select name="city">
+                    <option value="Kiev">Київ</option>
+                    <option value="Kharkov">Харків</option>
+                    <option value="Chernihiv">Чернігів</option>
+                </select>
+                <input type="text" placeholder="Адреса" required title="Введіть адресу доставки">
             </div>
             <div class="buttonsReg">
-                <button type="submit">Війти</button>
+                <button type="submit">Зареєструватися</button>
                 <button type="reset">Очистити поля</button>
             </div>
         </form>
     </div>
+    <div class="centerDropWindow" hidden="true">
+        <div class="dropWindow">
+            <div class="exitButton">
+                X
+            </div>
+            <div class="containerTextMessage">
+                <div class="textMessage">
+                    Введені дані прийняті на обробку!
+                </div>
+            </div>
+        </div>
+    </div>
+    <script src="../js/script_signUp.js"></script>
 </body>
 
 </html>
