--- a/html/main.html
+++ b/html/main.html
@@ -29,13 +29,16 @@
             </li>
         </ul>
     </header>
-    <div class="bg">
-        <div class="nameBody">РЕСТОРАН АССА</div>
-        <div class="buttonsOrderMenu">
-            <div><a href="#" class="link_preview">ЗАМОВИТИ ОНЛАЙН</a></div>
-            <div><a href="#" class="link_preview">ДИВИТИСЬ МЕНЮ</a></div>
+    <div class="containerBG">
+        <div class="bg">
+            <div class="nameBody">РЕСТОРАН АССА</div>
+            <div class="buttonsOrderMenu">
+                <div><a href="#" class="link_preview">ЗАМОВИТИ ОНЛАЙН</a></div>
+                <div><a href="#" class="link_preview">ДИВИТИСЬ МЕНЮ</a></div>
+            </div>
         </div>
     </div>
+
     <div class="tacos">
         <div class="containerTacos">
             <img src="../photo/tacos.webp" class="photo">
@@ -70,20 +73,22 @@
             <div class="speaker">Мексикана</div>
         </div>
     </div>
-    <!-- <div class="slider">
-        <div class="leftButton"></div>
-        <div>
-            <ul class="photoDish">
-                <li><img src="../photo/chervonuy_borshch.jpg" alt=""></li>
-                <li><img src="../photo/surnuku.jpg" alt=""></li>
-                <li><img src="../photo/holubtsi.jpg" alt=""></li>
-            </ul>
 
-
-
+    <div class="containerSlider">
+        <div class="slider">
+            <img src="../photo/left.png" alt="" class="leftButton">
+            <div class="containerPhoto">
+                <div class="photos">
+                    <img src="../photo/chervonuy_borshch.jpg" alt="">
+                    <img src="../photo/holubtsi.jpg" alt="">
+                    <img src="../photo/surnuku.jpg" alt="">
+                </div>
+                <div class="markers"></div>
+            </div>
+            <img src="../photo/right.png" alt="" class="rightButton">
         </div>
-        <div class="rightButton"></div>
-    </div> -->
+    </div>
+    <script src="../js/script_main.js"></script>
 </body>
 
 </html>
